# transformix

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
assets/config/: mlm.json
assets/tokenizers/tokenizer-38k/: special_tokens_map.json  tokenizer.json  tokenizer_config.json
examples/: test_tokenizer.py
src/transformix/: __init__.py  _clm.py  _codex.py  _codex_configuration.py  _distillation.py  _mlm.py  _ptlm.py  _ptlm_configuration.py  logging_config.py
src/transformix/cmdline/: __init__.py  _clm.py  _distillation.py  _mlm.py  _ptlm.py  _train.py  _utils.py
src/transformix/codex_base/: _modeling_codex.py
src/transformix/config/: __init__.py  _clm.py  _components.py  _distillation.py  _mlm.py  _ptlm.py
src/transformix/data/: __init__.py  _arrow_dataset.py  _arrow_datasets.py  _datamodule.py  _huggingface_dataset.py
src/transformix/hydra_config/: train.yaml
src/transformix/hydra_config/data/: huggingface.yaml
src/transformix/hydra_config/logger/: wandb.yaml
src/transformix/hydra_config/model/: mlm.yaml
src/transformix/hydra_config/paths/: default.yaml
src/transformix/hydra_config/trainer/: default.yaml
src/transformix/lm_base/: __init__.py  _lm_base.py  _utils.py
src/transformix/tokenization/: __init__.py  _pmlm_tokenizer.py
transformix/data/: constants.py
transformix/modeling/: __init__.py
transformix/modeling/masked_lm/: __init__.py  config.py  encoder.py
transformix/modeling/transformers/: attention.py  embedding.py  feedforward.py  layers.py  positional_encoding.py
transformix/tokenization/: __init__.py  sequence_tokenization.py
